[package]
name = "anvaya"
description = "ECS like dynamic storage in ~500 LOC."
version = "0.1.0"
edition = "2024"
authors = ["Nilay Savant <nilayofficial@gmail.com>"]
repository = "https://github.com/nilaysavant/anvaya"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ecs", "entity"]
categories = ["data-structures", "game-engines"]
exclude = [".github/"]

[package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
slab = { version = "0.4.10", default-features = false }

[features]
default = ["slab"]
# Enable Slab storage integration.
slab = ["dep:slab"]

[dependencies]
slab = { workspace = true, optional = true }

[dev-dependencies]
slab = { workspace = true }

[[example]]
name = "basic"
required-features = ["slab"]

[[example]]
name = "custom_storage"
required-features = []
